# zero-config

./: .env.zero_config.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.5.md  RELEASE_NOTES_0.1.6.md  alternative_env_matching.py  comparison_override_approaches.py  demo_dotdict_approach.py  demo_multi_level.py  demo_project_root_handling.py  project_structure.txt  pyproject.toml  setup.cfg  simple_boolean_test.py  test_boolean_parsing.py  test_missing_env_vars.py  test_single_setup.py
docs/: BEST_PRACTICES.md  EXAMPLES.md  MULTI_LEVEL_CONFIGURATION.md  PACKAGE_CONFLICT_PREVENTION.md  README.md
examples/: advanced_features.py  basic_usage.py  config_inspector.py  package_conflict_demo.py  safety_demonstration.py  simplified_usage.py
tests/: __init__.py  test_config.py  test_demo.py  test_integration.py
zero_config/: __init__.py  config.py
