[metadata]
name = zero-config
version = 0.1.1
description = A zero-configuration library with smart environment variable support and type-aware defaults
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zero-config/zero-config
author = Michael Chen
author_email = mchenmsn@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-dotenv>=0.19.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.8
    mypy>=0.800

[options.packages.find]
exclude =
    tests*
    examples*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short
